hphp/hack/test/typecheck/trait_use_aliasing_hack.php.exp
File "trait_use_aliasing_hack.php", line 10, characters 5-12:
Trait use aliasing is not supported in Hack. (Naming[2092])
